[project]
name = "python_http"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jyotin Goel", email = "b22ai063@iitj.ac.in" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
docker-repl = "docker_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
