[project]
name = "fastpyrepl"
version = "0.1.1"
description = "FastAPI service for executing Python code in session-scoped environments"
readme = "README.md"
authors = [
    { name = "Jyotin Goel", email = "b22ai063@iitj.ac.in" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "typer>=0.12.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
fastpyrepl = "fastpyrepl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastpyrepl"]
